# fast-retro

./: .gitignore  Dockerfile  README.md  env-dev.yml  pyproject.toml
aizynth/: finder.yml
molbart/: pipeline.py
molbart/config/: build_tokenizer.yaml  distill.yaml  evaluate.yaml  fine_tune.yaml  inference_score.yaml  pipeline.yaml  predict.yaml  train.yaml
molbart/config/dist_settings/: all.yaml  default.yaml  hard.yaml  logits.yaml  logits_hard.yaml  parameter_sharing.yaml  transfer.yaml
molbart/config/hydra/: default.yaml
molbart/config/logger/: csv.yaml  tensorboard.yaml  wandb.yaml
molbart/config/model/: bart.yaml
molbart/config/trainer/: default.yaml  inference.yaml
molbart/models/: __init__.py  abs_transformer.py  bart.py  chemformer.py
molbart/models/layers/: decoder_layer.py  encoder_layer.py  switch_layer.py
molbart/models/modules/: decoder.py  encoder.py
molbart/modules/: decoder.py  distiller.py  search.py  util.py
molbart/modules/callbacks/: callback_collection.py  callbacks.py
molbart/modules/data/: abs.py  base.py  seq2seq_data.py  util.py
molbart/modules/retrosynthesis/: round_trip_inference.py  round_trip_utils.py
molbart/modules/retrosynthesis/config/: round_trip_inference.yaml
molbart/modules/retrosynthesis/disconnection_aware/: utils.py
molbart/modules/scores/: scores.py
molbart/modules/utils/: smiles_utils.py  trainer_utils.py
route-similarity/: asign_atom_mapping.py  similarity_analysis.ipynb
service/: chemformer_disconnect_service.py  chemformer_service.py  service_utils.py  track_service.py  yaml_service.py
